--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "classnames": "^2.2.5",
     "clone": "^2.1.1",
     "history": "^4.6.3",
+    "lodash.set": "^4.3.2",
     "nprogress": "^0.2.0",
     "postcss-inline-rtl": "^0.9.8",
     "react": "^16.2.0",
@@ -35,7 +36,7 @@
     "styled-theme": "^0.3.3"
   },
   "devDependencies": {
-    "react-app-rewired": "^1.4.0"
+    "react-app-rewired": "^1.5.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
