--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "classnames": "^2.2.5",
     "clone": "^2.1.1",
     "history": "^4.6.3",
+    "leaflet": "^1.3.1",
     "lodash.set": "^4.3.2",
     "nprogress": "^0.2.0",
     "postcss-inline-rtl": "^0.9.8",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-dropzone-component": "^3.2.0",
     "react-intl": "^2.3.0",
     "react-placeholder": "^2.0.0",
+    "react-quill": "^1.2.7",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.0",
