--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "leaflet": "^1.3.1",
     "lodash.set": "^4.3.2",
     "nprogress": "^0.2.0",
+    "path-to-regexp": "^2.2.1",
     "postcss-inline-rtl": "^0.9.8",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
