--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "classnames": "^2.2.5",
     "clone": "^2.1.1",
     "history": "^4.6.3",
+    "identicon.js": "^2.3.2",
+    "jssha": "^2.3.1",
     "leaflet": "^1.3.1",
     "lodash.set": "^4.3.2",
     "nprogress": "^0.2.0",
