--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "antd": "^3.5.0",
     "antd-local-icon": "^0.1.3",
+    "bip39": "^2.5.0",
     "bitsharesjs": "^1.7.1",
     "classnames": "^2.2.5",
     "clone": "^2.1.1",
+    "hdkey": "^0.8.0",
     "history": "^4.6.3",
     "identicon.js": "^2.3.2",
     "jssha": "^2.3.1",
