--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.5.0",
     "antd-local-icon": "^0.1.3",
+    "bip39": "^2.5.0",
     "bitsharesjs": "^1.7.1",
     "classnames": "^2.2.5",
     "clone": "^2.1.1",
