--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "antd": "^3.5.0",
     "antd-local-icon": "^0.1.3",
     "bip39": "^2.5.0",
-    "bitsharesjs": "^1.7.1",
+    "bitsharesjs": "^1.7.6",
+    "bitsharesjs-ws": "^1.5.2",
     "classnames": "^2.2.5",
     "clone": "^2.1.1",
     "history": "^4.6.3",
