--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jssha": "^2.3.1",
     "leaflet": "^1.3.1",
     "lodash.set": "^4.3.2",
+    "moment": "^2.22.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^2.2.1",
     "postcss-inline-rtl": "^0.9.8",
