--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nprogress": "^0.2.0",
     "path-to-regexp": "^2.2.1",
     "postcss-inline-rtl": "^0.9.8",
-    "react": "^16.3.2",
+    "react": "^16.4.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-dropzone-component": "^3.2.0",
     "react-intl": "^2.3.0",
