--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nprogress": "^0.2.0",
     "path-to-regexp": "^2.2.1",
     "postcss-inline-rtl": "^0.9.8",
+    "qrcode.react": "^0.8.0",
+    "qrious": "^4.0.2",
     "react": "^16.4.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.3.2",
