--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "identicon.js": "^2.3.2",
     "jssha": "^2.3.1",
     "leaflet": "^1.3.1",
+    "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "moment": "^2.22.1",
     "nprogress": "^0.2.0",
