--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
   "extends": ["react-app", "plugin:prettier/recommended"],
   "rules": {
-    "react/jsx-uses-vars": 2
+    "react/jsx-uses-vars": 2,
+    "max-len": [2, 140, 4, {
+      "ignoreUrls": true
+    }]
   }
 }
