--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "antd": "^3.10.0",
     "antd-local-icon": "^0.1.3",
     "bip39": "^2.5.0",
-    "bitsharesjs": "^1.7.6",
-    "bitsharesjs-ws": "^1.5.2",
+    "bitsharesjs": "1.7.10",
+    "bitsharesjs-ws": "1.5.4",
     "classnames": "^2.2.5",
     "clone": "^2.1.1",
     "hdkey": "^1.0.0",
